# airdrop

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
programs/airdrop/: Cargo.toml
programs/airdrop/src/: lib.rs
tests/: airdrop.ts
